// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TableToolbarDefault rendering renders expected elements 1`] = `
<div
  className="Table__toolbarDefault Table--toolbarEnd"
>
  <Button />
</div>
`;

exports[`TableToolbarDefault rendering renders expected elements when hidden is set 1`] = `
<div
  aria-hidden={true}
  className="Table__toolbarDefault Table--toolbarEnd"
>
  hideChild
</div>
`;

exports[`TableToolbarDefault rendering renders expected elements when hidden is set and children is a list 1`] = `
<div
  aria-hidden={true}
  className="Table__toolbarDefault Table--toolbarEnd"
>
  hideChild
  hideChild
</div>
`;

exports[`TableToolbarDefault rendering renders expected elements when optional properties are set 1`] = `
<div
  className="Table__toolbarDefault Table--toolbarStart TestClass"
>
  <Button />
</div>
`;
